--- a/docs/water-quality-decision-matrix.Rmd
+++ b/docs/water-quality-decision-matrix.Rmd
@@ -10,6 +10,7 @@ xlsx <- here('data-raw/Results_Updated.xls')
 # import and download if new
 epcdata <- read_importwq(xlsx, download_latest = T)
 
+# summaries for inline
 sums <- wqsum_fun(epcdata, maxyr)
 ```
 
