improve inline text for tbbi, reproc figs

--- a/docs/tampa-bay-benthic-index.Rmd
+++ b/docs/tampa-bay-benthic-index.Rmd
@@ -7,12 +7,9 @@ maxyr <- 2019
 seg <- c('OTB', 'HB', 'MTB', 'LTB', 'All (wt)')
 
 tbbiscr <- anlz_tbbiscr(benthicdata)
-tbbimed <- anlz_tbbimed(tbbiscr, bay_segment = seg, yrrng = c(1993, maxyr))
 
-tbbidsc <- tbbimed %>% 
-  filter(yr == maxyr) %>% 
-  select(bay_segment, TBBICat) %>% 
-  tibble::deframe()
+# summaries for inline
+sums <- tbbisum_fun(tbbiscr, maxyr, seg)
 ```
 
 ## Tampa Bay Benthic Index
@@ -23,7 +20,7 @@ The Tampa Bay Benthic Monitoring Program was started in 1993, and partners inclu
 
 The Tampa Bay Benthic Index (TBBI) provides an estimate of the health of benthic invertebrate populations in Tampa Bay. The TBBI is scaled from 0-100 with values <73 classified as "Degraded", from 73-87 as "Intermediate", and >87 as "Healthy".  The average TBBI score increased from 1993-2019, and the bay-wide median TBBI was continuously in the "Healthy" range from 2015-2017, with slight decreases in 2018 and 2019. During that time frame, the highest TBBI values were observed in lower and Middle Tampa Bay, with intermediate values observed in Old Tampa Bay and degraded values in Hillsborough Bay.
 
-In `r maxyr`, Old Tampa Bay received an overall assessment of `r tbbidsc['OTB']` (based on the amount of site scores as degraded, intermediate, or healthy), Hillsborough Bay was `r tbbidsc['HB']`, Middle Tampa Bay was `r tbbidsc['MTB']`, and Lower Tampa Bay was `r tbbidsc['LTB']`.  The bay-wide assessment of benthic condition was `r tbbidsc['All (wt)']`.
+In `r maxyr`, Old Tampa Bay received an overall assessment of `r sums$OTB$cat` (based on the amount of site scores as degraded, intermediate, or healthy), Hillsborough Bay was `r sums$HB$cat`, Middle Tampa Bay was `r sums$MTB$cat`, and Lower Tampa Bay was `r sums$LTB$cat`.  The bay-wide assessment of benthic condition was `r sums[["All (wt)"]]$cat`.
 
 ```{r}
 p <- show_tbbimatrix(tbbiscr, width = 350, height = 600, plotly = T, family = fml, bay_segment = seg)
