--- a/docs/reach-index.Rmd
+++ b/docs/reach-index.Rmd
@@ -8,35 +8,29 @@ maxyr <- 2021
 
 ## Reach Index
 
-Being heard in an increasingly noisey digital landscape is harder now than ever before. TBEP uses social networking platforms to reach new audiences and maintain itentional communication with the online community. Through engagement-driven messaging, innovative mediums, and adaptive tinkering, the Program amplifies its messages, makes science accessible to the general public, and elevates awareness of its partners actions.
+Being heard in an increasingly noisy digital landscape is harder now than ever before. TBEP uses social networking platforms to reach new audiences and maintain intentional communication with the online community. Through engagement-driven messaging, innovative mediums, and adaptive tinkering, the Program amplifies its messages, makes science accessible to the general public, and elevates awareness of its partners actions.
 
-### FACEBOOK IN `r maxyr`
 
-```{r}
-reach_tab(comdat, platform = 'TBEP Facebook', maxyr = maxyr, chg = F)
-```
-
-### INSTAGRAM IN `r maxyr`
+### TBEP Website 
 
 ```{r}
-reach_tab(comdat, platform = 'TBEP IG', maxyr = maxyr, chg = F)
+coms_tab(comdat, category = 'Website', maxyr = maxyr, chg = F)
 ```
 
-### YOUTUBE IN `r maxyr`
+### Social Media 
 
 ```{r}
-reach_tab(comdat, platform = 'TBEP YouTube', maxyr = maxyr, chg = F)
+coms_tab(comdat, category = 'Social Media', maxyr = maxyr, chg = F)
 ```
 
-### UNSPLASH PHOTO SHARING IN `r maxyr`
+### Email Marketing
 
 ```{r}
-reach_tab(comdat, platform = 'TBEP Unsplash', maxyr = maxyr, chg = F)
+coms_tab(comdat, category = 'Email Marketing', maxyr = maxyr, chg = F)
 ```
 
-### EMAIL MARKETING
+### Tarpon Tag
 
 ```{r}
-ccreach_tab(comdat, maxyr = maxyr)
+coms_tab(comdat, category = 'Tarpon Tag', maxyr = maxyr, chg = F)
 ```
-
