--- a/docs/behavior-change.Rmd
+++ b/docs/behavior-change.Rmd
@@ -3,6 +3,7 @@
 ```{r setup, warning = F, message = F, echo = F}
 source(here::here('R/setup.R'))
 load(file = here('data/comdat.RData'))
+maxyr <- 2021
 ```
 
 ## Behavior Change 
@@ -14,3 +15,7 @@ Pipe Up! is TBEP’s latest community-based social marketing campaign, aimed at 
 TBEP keeps the "Scoop that Poop!" campaign alive by making outreach materials available to pet owners and interested campaign ambassadors upon request.
 
 Each summer, TBEP encourages residents to "protect their fun" as part of the Be Floridian campaign. Through inbound marketing tactics, the Program works to increase awareness of regional fertilizer ordinances, shares tips for individuals to reduce their nutrient footprint and encourages Florida-Friendly Landscaping practices.
+
+```{r}
+coms_tab(comdat, category = 'Tarpon Tag', maxyr = maxyr, chg = F)
+```
