--- a/docs/tampa-bay-nekton-index.Rmd
+++ b/docs/tampa-bay-nekton-index.Rmd
@@ -1,5 +1,8 @@
-<!-- # Thriving Habitats and Abundant Wildlife -->
-
+---
+output:
+  html_document:
+    css: "styles.css"
+---
 
 ```{r setup, warning = F, message = F, echo = F}
 source(here::here('R/setup.R'))
@@ -10,8 +13,6 @@ tbniscr <- anlz_tbniscr(fimdata)
 # summaries for inline
 sums <- tbnisum_fun(tbniscr, maxyr)
 ```
-
-## Tampa Bay Nekton Index
 
 The nekton index, which is similar to the water quality scorecard, uses data from the State’s Fisheries Independent Monitoring Program (FWC - FWRI) to track trends for representative species. With samples dating back to 1998, the long-term record can be related to water quality and habitat characteristics to identify factors affecting health of bay fisheries. The index evaluates catch data relative to habitat use, species composition and diversity, and feeding dynamics to understand trends in the fish community.
 
