--- a/docs/give-a-day.Rmd
+++ b/docs/give-a-day.Rmd
@@ -1,4 +1,8 @@
-<!-- # Informed, Engaged, Responsible Community -->
+---
+output:
+  html_document:
+    css: "styles.css"
+---
 
 ```{r setup, warning = F, message = F, echo = F}
 source(here::here('R/setup.R'))
@@ -6,8 +10,6 @@ load(file = here('data/gaddat.RData'))
 yrsel <- 2021
 tots <- gadsum_fun(gaddat)
 ```
-
-## Give-a-Day for the Bay
 
 Community involvement has been at the center of Tampa Bay's recovery story since the start. Keeping that tradition alive is the Give-a-Day for the Bay volunteer program where community members put in "sweat equity" to protect and restore bay-area parks and preserves. From planting native vegetation to removing trash from a mangrove island, these events encourage the community to get out, give back, and enjoy the bay!
 
