--- a/docs/total-nitrogen-loading.Rmd
+++ b/docs/total-nitrogen-loading.Rmd
@@ -1,4 +1,8 @@
-<!-- # Clean Waters & Sediments -->
+---
+output:
+  html_document:
+    css: "styles.css"
+---
 
 ```{r setup, warning = F, message = F, echo = F}
 source(here::here('R/setup.R'))
@@ -6,8 +10,6 @@ source(here::here('R/setup.R'))
 load(url("https://github.com/tbep-tech/load-estimates/raw/main/data/totanndat.RData"))
 load(file = here('data/popdat.RData'))
 ```
-
-## Total Nitrogen Loading
 
 In 2011, the Florida Department of Environmental Protection approved regulatory thresholds for nutrients that apply to major segments of Tampa Bay.  These criteria describe a point at which nutrient loadings may have a negative impact on environmental resources.  These thresholds are defined for ratios of total nitrogen (nutrient load) to the volume of water (hydrologic load) entering the bay, accounting for annual variation in rainfall.  Each year, the Tampa Bay Nitrogen Management Consortium assesses if conditions are within allowable limits.  This is accomplished through regular synthesis and reporting of load estimates by the Tampa Bay Estuary Program.  To date, nitrogen and hydrologic load ratios continue to decline throughout the Bay, indicating that the Nitrogen Management Consortium has been effective at reducing the amount of nutrients per unit of water input into Tampa Bay. 
 
