--- a/docs/critical-coastal-habitat-trends.Rmd
+++ b/docs/critical-coastal-habitat-trends.Rmd
@@ -27,13 +27,13 @@ The increasing trend in seagrass coverage is a testament to improved bay water q
 The intertidal habitat gains demonstrate the effectiveness of publicly-funded habitat restoration projects and state and federal wetland regulatory programs. Increases in salt barrens may also reflect a landward expansion associated with sea level rise. 
 
 ```{r}
-lngtrmtab_fun(subtacres, 'Category', typ = 'subtidal', yrsel = '1988', topyr = '2020', estout = F)
+lngtrmtab_fun(subtacres, 'Category', typ = 'subtidal', yrsel = '1988', topyr = '2020', estout = F, family = fml)
 ```
 
 However, a `r sprest['Developed']`% increase for developed lands and `r sprest['Restorable']`% loss for restorable lands in the watershed is a concern for continued habitat restoration and protection. A loss of upland habitats is the result of continued human population growth and urban development in the Tampa Bay watershed, and unless local protections for native upland habitats improve, this trend will likely continue.
 
 ```{r}
-lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = '2020', estout = F)
+lngtrmtab_fun(acres, 'Category', typ = 'supratidal', yrsel = '1990', topyr = '2020', estout = F, family = fml)
 ```
 
 Land use change data: https://shiny.tbep.org/landuse-change/
