--- a/docs/grants-awarded.Rmd
+++ b/docs/grants-awarded.Rmd
@@ -24,6 +24,6 @@ Established during the COVID-19 pandemic, the Digital Challenge Grant program wa
 ### `r maxyr` FUNDING SUMMARY 
 
 ```{r}
-grnttab_fun(tberfdat, bmgdat, dcgdat, yrsel = maxyr)
+grnt_tab(tberfdat, bmgdat, dcgdat, yrsel = maxyr, family = fml)
 ```
 
