--- a/docs/reach-index.Rmd
+++ b/docs/reach-index.Rmd
@@ -16,18 +16,18 @@ Being heard in an increasingly noisy digital landscape is harder now than ever b
 ### TBEP Website 
 
 ```{r}
-coms_tab(comdat, category = 'Website', maxyr = maxyr, chg = F)
+coms_tab(comdat, category = 'Website', maxyr = maxyr, chg = F, family = fml)
 ```
 
 ### Social Media 
 
 ```{r}
-coms_tab(comdat, category = 'Social Media', maxyr = maxyr, chg = F)
+coms_tab(comdat, category = 'Social Media', maxyr = maxyr, chg = F, family = fml)
 ```
 
 ### Email Marketing
 
 ```{r}
-coms_tab(comdat, category = 'Email Marketing', maxyr = maxyr, chg = F)
+coms_tab(comdat, category = 'Email Marketing', maxyr = maxyr, chg = F, family = fml)
 ```
 
